	  it, as no one is making sure that the updated code to keep it
	  compiling actually works, nor is anyone fixing bugs in it.
	* Save Conversation works again (Kevin Stange)
	* The Clear button in privacy works (Robert Mibus)
	* MSN error reporting works again (Stu Tomlinson)
	* MSN e-mail notifications should no longer cause Gaim to crash
	  (Felipe Contreras)
	* All away messages should now show up in tooltips
	* Removing zephyr buddies no longer crashes (Arun A. Tharuvai)

version 0.76 (04/01/2004):
	New Features:
	* WYSIWYG text input (with much help from Gary Kramlich and Kevin Stange)
	* Ability to be invisible on AIM
	* Chatroom list support (Tim Ringenbach)
	* Added auto-completion for screen names to the New Instant Message and
	  Get User Info dialogs.
	* Non-ascii character support in AIM chats (Uli Luckas and Marco Ziech)
	* Vastly improved browser opening, with tab support! (Nathan Fredrickson)
	* Added support for connecting to MSN using the port 80 method.
	* Support for Mozilla Firefox (Chris Friesen and Nathan Fredrickson)
	* Added protocol-specific preferences (Gary Kramlich)
	* Local IP address information can be changed in Preferences
	  (Tim Ringenbach)
	* Improved local IP address detection (Tim Ringenbach)
	* Offline accounts in account drop-down lists are now greyed (Etan Reisner)
	* Improved accessibility support for screen readers and other
	  accessibility tools (Marc Mulcahy)
	* Improved accessibility in conversation windows (Nathan Fredrickson)
	* Keyboard access to context menus via Shift+F10 (Marc Mulcahy)
	* Core/UI split event loop code. (Scott Lamb)
	* Added improvements to the multi-field request code, including
	  required fields and account fields.
	* Moved more dialogs to the request API for interface consistency
	  (Send Message, Get User Info, and Insert Link dialogs)
	* Jabber file transfer
	* IRC file transfer (Tim Ringenbach)
	* Added a hidden preference for disabling buddy list tooltips or