@@ -136,5 +136,6 @@ Jason Willis
 Matt Wilson
 Ximian
 Jared Yanovich
+Nickolai Zeldovich
 Marco Ziech
 Jaroen Zwartepoorte
